syntax="proto3";

package restaurant_server;
option go_package = "proto/restaurant_server";

message Restaurant {
    string phone = 1;
    string email = 2;
    string name = 3;
    Address address = 4;
    repeated MenuItem menuitem = 5;
}

message Address {
    string streetNumber = 1;
    string street = 2;
    string city = 3;
    string state = 4;
    string zip = 5;
}

message MenuItem {
    string name = 1;
    double price = 2;
}

message AddRestaurantRequest {
    Restaurant restaurant = 1;
}

message AddRestaurantResponse {
    string response = 1;
}

message UpdateRestaurantRequest {
    string oldEmail = 1;
    string oldPhone = 2;
    Restaurant restaurant = 3;
}

message UpdateRestaurantResponse {
    string response = 1;
}

message DeleteRestaurantRequest {
    string email = 1;
    string phone = 2;
}

message DeleteRestaurantResponse {
    string response = 1;
}

service Restaurants {
    // Unary API to add restaurant
    rpc AddRestaurant (AddRestaurantRequest) returns (AddRestaurantResponse) {};

    // Unary API to update restaurant info
    rpc UpdateRestaurant (UpdateRestaurantRequest) returns (UpdateRestaurantResponse) {};

    // Unary API to delete restaurant
    rpc DeleteRestaurant (DeleteRestaurantRequest) returns (DeleteRestaurantResponse) {};
}